--- a/modules/react/package.json
+++ b/modules/react/package.json
@@ -31,6 +31,7 @@
     "build-bundle": "webpack --display=minimal --config ../../scripts/bundle.config.js"
   },
   "dependencies": {
+    "@turf/helpers": "^5.1.5",
     "@turf/transform-translate": "^5.1.5",
     "styled-components": "^4.1.3",
     "reselect": "^3.0.0",
