--- a/examples/camera/package.json
+++ b/examples/camera/package.json
@@ -10,9 +10,10 @@
     "deck.gl": "^8.3.4"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.4",
-    "@babel/preset-react": "^7.9.4",
+    "@babel/core": "^7.12.1",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.0.5",
     "html-webpack-plugin": "^3.0.7",
     "webpack": "^4.20.2",
