--- a/examples/kepler-integration/package.json
+++ b/examples/kepler-integration/package.json
@@ -5,35 +5,30 @@
   },
   "dependencies": {
     "@luma.gl/debug": "^8.3.1",
-    "@luma.gl/shadertools": "^8.3.1",
-    "d3-color": "^1.4.1",
-    "@turf/transform-translate": "^5.1.5",
+    "@deck.gl/core": "^8.3",
+    "@deck.gl/geo-layers": "^8.3",
+    "@deck.gl/layers": "^8.3",
+    "@deck.gl/react": "^8.3",
     "hubble.gl": "^1.1.0",
     "d3-request": "^1.0.6",
     "global": "^4.3.0",
     "kepler.gl": "^2.3.2",
-    "lodash.debounce": "^4.0.8",
-    "lodash.get": "^4.4.2",
-    "ocular-dev-tools": "^0.1.9",
-    "react": "^16.8.4",
-    "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.8.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-intl": "^3.12.0",
     "react-markdown": "^4.2.2",
     "react-palm": "^3.3.6",
     "react-redux": "^7.1.3",
-    "react-router": "3.2.5",
-    "react-router-redux": "^4.0.8",
     "react-virtualized": "^9.21.0",
     "redux-actions": "^2.2.1",
     "redux-thunk": "^1.0.0",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "^7.12.1",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.0.0",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
