--- a/modules/react/package.json
+++ b/modules/react/package.json
@@ -33,18 +33,25 @@
   "dependencies": {
     "@turf/helpers": "^5.1.5",
     "@turf/transform-translate": "^5.1.5",
-    "styled-components": "^4.1.3",
-    "reselect": "^3.0.0",
+    "classnames": "^2.2.6",
+    "fuzzy": "^0.1.3",
+    "global": "^4.4.0",
+    "lodash.uniqby": "^4.7.0",
     "popmotion": "^8.6.10",
-    "react-modal": "^3.11.2",
+    "prop-types": "^15.7.2",
     "react-intl": "^3.12.0",
-    "@deck.gl/core": ">=8.3",
-    "@deck.gl/geo-layers": ">=8.3",
-    "@deck.gl/layers": ">=8.3",
-    "@deck.gl/react": ">=8.3",
-    "kepler.gl": ">=2.3"
+    "react-lifecycles-compat": "^3.0.4",
+    "react-modal": "^3.11.2",
+    "react-onclickoutside": "^6.9.0",
+    "reselect": "^3.0.0",
+    "styled-components": "^4.1.3"
   },
   "peerDependencies": {
+    "@deck.gl/core": "^8.2.0",
+    "@deck.gl/geo-layers": "^8.2.0",
+    "@deck.gl/mesh-layers": "^8.2.0",
+    "@deck.gl/layers": "^8.2.0",
+    "@deck.gl/react": "^8.2.0",
     "@hubble.gl/core": "^1.1.0",
     "react": ">=16.8",
     "react-dom": ">=16.8"
