--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@babel/register": "^7.12.1",
+    "@deck.gl/core": "^8.2.0",
+    "@deck.gl/geo-layers": "^8.2.0",
+    "@deck.gl/mesh-layers": "^8.2.0",
+    "@deck.gl/layers": "^8.2.0",
+    "@deck.gl/react": "^8.2.0",
     "@luma.gl/engine": "^8.3.1",
     "@probe.gl/bench": "^3.2.1",
     "@probe.gl/test-utils": "^3.2.1",
